fix stupid overflow issues
why is border-box not the default??

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -19,6 +19,12 @@
 	color-scheme: dark;
 }
 
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
 // fix weird lip around edges
 body {
 	margin: 0;
@@ -129,8 +135,7 @@ a {
 .container {
 	width: 100%;
 	flex-grow: 1;
-	padding-right: 30px;
-	padding-left: 30px;
+	padding: 50px 15px;
 	margin-right: auto;
 	margin-left: auto;
 	@media screen and (min-width: 576px) {
